Fix width on mobile user-details

--- a/src/components/user-details/UserDetails.scss
+++ b/src/components/user-details/UserDetails.scss
@@ -42,6 +42,7 @@
             width: 4.2em;
         }
         .info {
+            max-width: 50%;
             display: flex;
             flex-flow: column;
             margin-left: 0.3em;
@@ -60,6 +61,7 @@
                 font-size: 0.8em;
                 margin-bottom: 1rem;
             }
+            hyphens: auto;
         }
     }
 }
